# ComputeLibrary

./: .bazelrc  .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  .mdl.rb  .pre-commit-config.yaml  Android.bp  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  CONTRIBUTING.md  Generated_Android.bp  LICENSE  README.md  REUSE.toml  SConscript  SConstruct  SECURITY.md  WORKSPACE  cp.sh  documentation.xhtml  filedefs.json  filelist.json  latest  progress.md  run.sh  sconscript
arm_compute/: Acl.h  Acl.hpp  AclDescriptors.h  AclEntrypoints.h  AclOpenClExt.h  AclOperators.h  AclTypes.h  AclUtils.h  AclVersion.h  BUILD.bazel  graph.h  graph2.h
arm_compute/core/: AccessWindowAutoPadding.h  AccessWindowStatic.h  AccessWindowTranspose.h  ActivationLayerInfo.h  ConvolutionInfo.h  Coordinates.h  CoreTypes.h  Dimensions.h  Error.h  FixedPoint.h  FixedPoint.inl  FullyConnectedLayerInfo.h  GEMMInfo.h  GPUTarget.h  HOGInfo.h  Helpers.h  Helpers.inl  IAccessWindow.h  IArray.h  IDevice.h  IDistribution.h  IDistribution1D.h  IHOG.h  IKernel.h  ILut.h  IMultiHOG.h  IMultiImage.h  IPyramid.h  IReducibleTensor.h  ITensor.h  ITensorInfo.h  ITensorPack.h  KernelDescriptors.h  Log.h  Logger.h  MatMulInfo.h  MultiImageInfo.h  PixelValue.h  PyramidInfo.h  QAsymm8.h  (+20 more)
arm_compute/function_info/: ActivationLayerInfo.h  ConvolutionInfo.h  FullyConnectedLayerInfo.h  GEMMInfo.h  MatMulInfo.h  ScatterInfo.h
arm_compute/graph/: DataLayerVisitor.h  Edge.h  Error.h  Graph.h  GraphBuilder.h  GraphContext.h  GraphManager.h  IDeviceBackend.h  IGraphMutator.h  IGraphPrinter.h  INode.h  INodeVisitor.h  IOperation.h  ITensorAccessor.h  ITensorHandle.h  ITensorObject.h  LayerDescriptors.h  Logger.h  NodeContext.h  NodeParameter.h  Nodes.h  OperationRegistrar.h  OperationRegistry.h  PassManager.h  SubGraph.h  SubTensor.h  Tensor.h  TensorDescriptor.h  TypeLoader.h  TypePrinter.h  Types.h  Utils.h  Workload.h
arm_compute/graph2/: Edge.h  Graph.h  GraphBuilder.h  GraphContext.h  GraphManager.h  IDeviceBackend.h  IGraphMutator.h  IGraphPrinter.h  INode.h  INodeVisitor.h  ITensorAccessor.h  ITensorHandle.h  Logger.h  PassManager.h  Tensor.h  TensorDescriptor.h  TypePrinter.h  Types.h  Utils.h  Workload.h
arm_compute/runtime/: Allocator.h  Array.h  BlobLifetimeManager.h  BlobMemoryPool.h  COOTensor.h  CPUUtils.h  CSRTensor.h  DeviceProperties.h  Distribution1D.h  FunctionDescriptors.h  HOG.h  IAllocator.h  IAssetManager.h  IFunction.h  ILifetimeManager.h  ILutAllocator.h  IMemory.h  IMemoryGroup.h  IMemoryManager.h  IMemoryPool.h  IMemoryRegion.h  IOperator.h  IPoolManager.h  IRuntimeContext.h  IScheduler.h  ISimpleLifetimeManager.h  ITensorAllocator.h  ITransformWeights.h  IWeightsManager.h  Lut.h  LutAllocator.h  Macros.h  Memory.h  MemoryGroup.h  MemoryGroupBase.h  MemoryManagerOnDemand.h  MemoryRegion.h  MultiHOG.h  MultiImage.h  OffsetLifetimeManager.h  (+16 more)
compute_kernel_writer/: .clang-format  CMakeLists.txt  README.md  SConscript  SConstruct
compute_kernel_writer/examples/: add_exp_store.cpp
compute_kernel_writer/prototype/: CMakeLists.txt
compute_kernel_writer/src/: Error.cpp  Helpers.cpp  Helpers.h  ITensor.h  ITensorArgument.h  ITensorComponent.h  ITile.cpp  ITile.h  ITileOperand.cpp  Kernel.cpp  KernelArgument.cpp  KernelWriter.cpp  Prototype.h  Tensor3dMapper.cpp  Tensor3dMapper.h  TensorOperand.cpp  TensorSampler.cpp  TensorUtils.cpp  TensorUtils.h  TileInfo.cpp  TileOperand.cpp  TileView.cpp  TileView.h
compute_kernel_writer/validation/: SConscript  Validation.cpp
examples/: BUILD.bazel  CMakeLists.txt  SConscript  cl_cache.cpp  cl_convolution.cpp  cl_events.cpp  cl_sgemm.cpp  gc_absdiff.cpp  gc_dc.cpp  graph_alexnet.cpp  graph_cl_mobilenet_qasymm8.cpp  graph_cl_shufflenet.cpp  graph_deepspeech_v0_4_1.cpp  graph_edsr.cpp  graph_edsr.h  graph_googlenet.cpp  graph_inception_resnet_v1.cpp  graph_inception_resnet_v2.cpp  graph_inception_v3.cpp  graph_inception_v4.cpp  graph_lenet.cpp  graph_mnist.cpp  graph_mobilenet.cpp  graph_mobilenet_qasymm8.cpp  graph_mobilenet_v2.cpp  graph_resnet12.cpp  graph_resnet50.cpp  graph_resnet_v2_50.cpp  graph_resnext50.cpp  graph_shufflenet.cpp  graph_squeezenet.cpp  graph_squeezenet_v1_1.cpp  graph_srcnn955.cpp  graph_ssd_mobilenet.cpp  graph_vanilla_transformer.cpp  graph_vgg16.cpp  graph_vgg19.cpp  graph_vgg_vdsr.cpp  graph_yolov3.cpp  graph_yolov3_output_detector.cpp  (+16 more)
examples/dynamic_fusion/: cl_fused_conv2d_elementwise_add.cpp  cl_ref_conv2d_elementwise_add.cpp
examples/gemm_tuner/: CommonGemmExampleOptions.cpp  CommonGemmExampleOptions.h  GemmTuner.py  GemmTunerHelpers.h  README.md  benchmark_gemm_examples.sh  cl_gemm_benchmark.sh  cl_gemm_native.cpp  cl_gemm_reshaped.cpp  cl_gemm_reshaped_rhs_only.cpp  cl_gemmlowp_reshaped.cpp  cl_gemmlowp_reshaped_rhs_only_fused_output_stage_fixedpoint.cpp
tests/: AssetsLibrary.cpp  AssetsLibrary.h  BUILD.bazel  CMakeLists.txt  DatasetManager.cpp  DatasetManager.h  Globals.h  IAccessor.h  IArrayAccessor.h  IHOGAccessor.h  ILutAccessor.h  PaddingCalculator.h  ParametersLibrary.cpp  ParametersLibrary.h  ProgramOptions.cpp  ProgramOptions.h  RawLutAccessor.h  RawTensor.cpp  RawTensor.h  SConscript  SConscript.orig  SimpleTensor.h  SimpleTensorAccessor.h  SimpleTensorPrinter.h  TensorCache.h  TensorLibrary.cpp  TensorLibrary.h  TypePrinter.h  TypeReader.h  Types.h  UserConfiguration.cpp  UserConfiguration.h  Utils.h  main.cpp
tests/CL/: CLAccessor.h  CLArrayAccessor.h  CLHOGAccessor.h  CLLutAccessor.h  Helper.h
tests/GLES_COMPUTE/: GCAccessor.h  Helper.h
tests/NEON/: Accessor.h  ArrayAccessor.h  HOGAccessor.h  Helper.h  LutAccessor.h  NEAccessor.h  NELutAccessor.h
tests/benchmark/: CMakeLists.txt  Datasets.h  DragonBenchConfigs.cpp  DragonBenchConfigs.h  Instrument.h  PMUCounter.cpp  PMUCounter.h  PerformanceProgramOptions.cpp  PerformanceProgramOptions.h  PerformanceUserConfiguration.cpp  PerformanceUserConfiguration.h  Profiler.cpp  Profiler.h  WallClockTimer.cpp  WallClockTimer.h  main.cpp
tests/benchmark_examples/: RunExample.cpp
tests/benchmark_new/: main.cpp
(+340496 files in other folders)
